--- a/selfie.plist
+++ b/selfie.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/u0acypjzfw6fgn6/selfie.ipa</string>
+					<string>https://github.com/NikeGoon/selfie/blob/master/selfie.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
